[package]
name = "night_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
crossterm = "0.29.0"
ratatui = "0.29.0"
tui-textarea = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.17.2"
arc-swap = "1.6.0"
